--- a/app/src/main/res/layout/user_dashboard.xml
+++ b/app/src/main/res/layout/user_dashboard.xml
@@ -4,38 +4,214 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".UserDashboard">
 
-    <!-- Main content -->
+    <!-- 1. MAIN SCREEN CONTENT (First direct child of DrawerLayout) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".UserDashboard">
+        android:layout_height="match_parent">
 
+        <!-- Toolbar remains at the top -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
+            android:layout_marginTop="35dp"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginTop="32dp"
-            android:background="?attr/colorPrimary"
+            android:background="#1E427A"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:title="User Dashboard" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Your other UI elements go here -->
+        <!-- === START OF INTEGRATED CODE === -->
+        <!-- This ConstraintLayout now holds all your new UI components. -->
+        <!-- It is constrained to be below the toolbar. -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:context=".MainActivity">
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/bg_rec"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="0dp"
+                android:layout_height="152dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/rounded_rectangle"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.022" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="107dp"
+                android:layout_height="105dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/img"
+                app:civ_border_color="#000"
+                app:civ_border_width="2dp"
+                app:layout_constraintBottom_toBottomOf="@+id/view3"
+                app:layout_constraintStart_toStartOf="@+id/view3"
+                app:layout_constraintTop_toTopOf="@+id/view3" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Juan Dela Cruz"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="@+id/view3"
+                app:layout_constraintEnd_toEndOf="@+id/view3"
+                app:layout_constraintStart_toEndOf="@+id/profile_image"
+                app:layout_constraintTop_toTopOf="@+id/view3" />
+
+            <View
+                android:id="@+id/sched_box"
+                android:layout_width="0dp"
+                android:layout_height="217dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/box_item"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view3"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/today_schedule"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Today’s Schedule"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="@+id/sched_box"
+                app:layout_constraintTop_toTopOf="@+id/sched_box" />
+
+            <TextView
+                android:id="@+id/schedule_item"
+                android:layout_width="372dp"
+                android:layout_height="158dp"
+                android:layout_marginHorizontal="8dp"
+                android:background="@drawable/item"
+                app:layout_constraintBottom_toBottomOf="@+id/sched_box"
+                app:layout_constraintEnd_toEndOf="@+id/sched_box"
+                app:layout_constraintStart_toStartOf="@+id/sched_box"
+                app:layout_constraintTop_toBottomOf="@id/today_schedule"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <View
+                android:id="@+id/annoucement_box"
+                android:layout_width="0dp"
+                android:layout_height="215dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/box_item"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.25"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sched_box"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/school_announcements"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="sans-serif-black"
+                android:text="School Announcements"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="@+id/annoucement_box"
+                app:layout_constraintTop_toTopOf="@+id/annoucement_box" />
+
+            <TextView
+                android:id="@+id/announcments_item"
+                android:layout_width="377dp"
+                android:layout_height="159dp"
+                android:layout_marginHorizontal="8dp"
+                android:background="@drawable/item"
+                app:layout_constraintBottom_toBottomOf="@+id/annoucement_box"
+                app:layout_constraintEnd_toEndOf="@+id/annoucement_box"
+                app:layout_constraintStart_toStartOf="@+id/annoucement_box"
+                app:layout_constraintTop_toBottomOf="@id/school_announcements"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <View
+                android:id="@+id/billing_box"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/box_item"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/annoucement_box" />
+
+            <TextView
+                android:id="@+id/billing_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Billing Balance"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="@+id/billing_box"
+                app:layout_constraintTop_toTopOf="@+id/billing_box" />
+
+            <TextView
+                android:id="@+id/billing_item"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/item"
+                app:layout_constraintBottom_toBottomOf="@+id/billing_box"
+                app:layout_constraintEnd_toEndOf="@+id/billing_box"
+                app:layout_constraintStart_toStartOf="@+id/billing_box"
+                app:layout_constraintTop_toBottomOf="@id/billing_balance" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- === END OF INTEGRATED CODE === -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Right-side Navigation Drawer -->
+    <!-- 2. LEFT DRAWER (Second direct child of DrawerLayout) -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="end"
-        app:menu="@menu/drawer_menu"
-        app:headerLayout="@layout/drawer_header"/>
+        android:layout_gravity="start"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
+
