--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,6 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/nav_appointment"
+        android:title="Appointment"
+        android:icon="@android:drawable/ic_menu_preferences"/>
+
+    <item
+        android:id="@+id/nav_clearance"
+        android:title="Clearance"
+        android:icon="@android:drawable/ic_menu_preferences"/>
+
+    <item
+        android:id="@+id/nav_grade"
+        android:title="Grade"
+        android:icon="@android:drawable/ic_menu_preferences"/>
+
+
+    <item
         android:id="@+id/nav_home"
         android:title="Home"
         android:icon="@android:drawable/ic_menu_view"/>
@@ -11,10 +27,6 @@
         android:title="Profile"
         android:icon="@android:drawable/ic_menu_myplaces"/>
 
-    <item
-        android:id="@+id/nav_settings"
-        android:title="Settings"
-        android:icon="@android:drawable/ic_menu_preferences"/>
 
     <item
         android:id="@+id/nav_logout"
