--- a/app/src/main/res/layout/admin_profile.xml
+++ b/app/src/main/res/layout/admin_profile.xml
@@ -47,36 +47,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Info box -->
-
-
-
-
-            <View
-                android:id="@+id/academicS_box"
-                android:layout_width="380dp"
-                android:layout_height="464dp"
-                android:layout_margin="8dp"
-                android:background="@drawable/box_item"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.51"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.958" />
-
-            <TextView
-                android:id="@+id/academicS_item"
-                android:layout_width="362dp"
-                android:layout_height="416dp"
-                android:background="@drawable/item"
-                android:text=""
-                app:layout_constraintBottom_toBottomOf="@+id/academicS_box"
-                app:layout_constraintEnd_toEndOf="@+id/academicS_box"
-                app:layout_constraintHorizontal_bias="0.444"
-                app:layout_constraintStart_toStartOf="@+id/academicS_box"
-                app:layout_constraintTop_toTopOf="@+id/academicS_box"
-                app:layout_constraintVertical_bias="0.812" />
-
             <View
                 android:id="@+id/info_box"
                 android:layout_width="381dp"
@@ -118,6 +88,20 @@
                 app:layout_constraintTop_toTopOf="@+id/info_box"
                 app:layout_constraintVertical_bias="0.773" />
 
+
+            <View
+                android:id="@+id/academicS_box"
+                android:layout_width="380dp"
+                android:layout_height="464dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/box_item"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.51"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.958" />
+
             <TextView
                 android:id="@+id/name2"
                 android:layout_width="wrap_content"
@@ -133,14 +117,30 @@
                 app:layout_constraintTop_toTopOf="@+id/academicS_box"
                 app:layout_constraintVertical_bias="0.0" />
 
+            <ListView
+                android:id="@+id/student_list"
+                android:layout_width="362dp"
+                android:layout_height="416dp"
+                android:background="@drawable/item"
+                app:layout_constraintBottom_toBottomOf="@+id/academicS_box"
+                app:layout_constraintEnd_toEndOf="@+id/academicS_box"
+                app:layout_constraintHorizontal_bias="0.444"
+                app:layout_constraintStart_toStartOf="@+id/academicS_box"
+                app:layout_constraintTop_toTopOf="@+id/academicS_box"
+                app:layout_constraintVertical_bias="0.812" />
+
             <SearchView
+                android:id="@+id/searchlist"
                 android:layout_width="166dp"
                 android:layout_height="38dp"
-                android:id="@+id/searchlist"
                 android:hint="Search"
-                tools:layout_editor_absoluteX="226dp"
-                tools:layout_editor_absoluteY="366dp"
-                android:background="@drawable/white_search_box_background"/>
+                android:background="@drawable/white_search_box_background"
+                app:layout_constraintBottom_toBottomOf="@+id/background_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.873"
+                app:layout_constraintStart_toStartOf="@+id/background_view"
+                app:layout_constraintTop_toTopOf="@+id/background_view"
+                app:layout_constraintVertical_bias="0.449" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <!-- === END OF INTEGRATED CODE === -->
@@ -153,7 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/drawer_header"
+        app:headerLayout="@layout/drawer_a_header"
         app:menu="@menu/drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
