--- a/app/src/main/res/layout/admin_profile.xml
+++ b/app/src/main/res/layout/admin_profile.xml
@@ -121,6 +121,7 @@
                 android:layout_width="362dp"
                 android:layout_height="416dp"
                 android:background="@drawable/item"
+                android:descendantFocusability="blocksDescendants"
                 app:layout_constraintBottom_toBottomOf="@+id/academicS_box"
                 app:layout_constraintEnd_toEndOf="@+id/academicS_box"
                 app:layout_constraintHorizontal_bias="0.444"
@@ -136,10 +137,10 @@
                 android:hint="Search"
                 app:layout_constraintBottom_toBottomOf="@+id/background_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.781"
+                app:layout_constraintHorizontal_bias="0.778"
                 app:layout_constraintStart_toStartOf="@+id/background_view"
                 app:layout_constraintTop_toTopOf="@+id/background_view"
-                app:layout_constraintVertical_bias="0.451" />
+                app:layout_constraintVertical_bias="0.401" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <!-- === END OF INTEGRATED CODE === -->
@@ -153,6 +154,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/drawer_a_header"
-        app:menu="@menu/drawer_menu" />
+        app:menu="@menu/admin_drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
