--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -121,6 +121,8 @@
                 android:layout_width="356dp"
                 android:layout_height="90dp"
                 android:background="@drawable/item"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 android:text=""
                 app:layout_constraintBottom_toBottomOf="@+id/academicS_box"
                 app:layout_constraintEnd_toEndOf="@+id/academicS_box"
@@ -177,6 +179,8 @@
                 android:layout_width="356dp"
                 android:layout_height="76dp"
                 android:background="@drawable/item"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 android:text=""
                 app:layout_constraintBottom_toBottomOf="@+id/contact_info"
                 app:layout_constraintEnd_toEndOf="@+id/contact_info"
