--- a/app/src/main/res/layout/activity_user_grades.xml
+++ b/app/src/main/res/layout/activity_user_grades.xml
@@ -102,7 +102,7 @@
             android:layout_margin="12dp"
             android:background="@drawable/item"
             android:padding="12dp"
-            app:layout_constraintTop_toBottomOf="@id/grades"
+            app:layout_constraintTop_toBottomOf="@+id/grades"
             app:layout_constraintBottom_toBottomOf="@+id/info_box"
             app:layout_constraintStart_toStartOf="@+id/info_box"
             app:layout_constraintEnd_toEndOf="@+id/info_box">
@@ -370,16 +370,5 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer_menu" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
