--- a/app/src/main/res/layout/admin_dashboard.xml
+++ b/app/src/main/res/layout/admin_dashboard.xml
@@ -121,6 +121,8 @@
                 android:layout_height="157dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="@+id/sched_box"
                 app:layout_constraintEnd_toEndOf="@+id/sched_box"
                 app:layout_constraintStart_toStartOf="@+id/sched_box"
@@ -157,6 +159,8 @@
                 android:id="@+id/announcments_item"
                 android:layout_width="339dp"
                 android:layout_height="155dp"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/annoucement_box"
@@ -191,10 +195,12 @@
 
             <TextView
                 android:id="@+id/billing_item"
-                android:layout_width="347dp"
-                android:layout_height="75dp"
+                android:layout_width="343dp"
+                android:layout_height="64dp"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/billing_box"
                 app:layout_constraintEnd_toEndOf="@+id/billing_box"
@@ -202,20 +208,6 @@
                 app:layout_constraintStart_toStartOf="@+id/billing_box"
                 app:layout_constraintTop_toBottomOf="@id/billing_balance"
                 app:layout_constraintVertical_bias="0.78" />
-
-            <Button
-                android:id="@+id/add_A"
-                android:layout_width="56dp"
-                android:layout_height="45dp"
-                android:backgroundTint="#359535"
-                android:text="+"
-                android:textSize="50px"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.719"
-                app:layout_constraintStart_toStartOf="@+id/view"
-                app:layout_constraintTop_toTopOf="@+id/view"
-                app:layout_constraintVertical_bias="0.764" />
 
             <Button
                 android:id="@+id/del_A"
@@ -226,10 +218,24 @@
                 android:textSize="50px"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.935"
+                app:layout_constraintHorizontal_bias="0.927"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 app:layout_constraintTop_toTopOf="@+id/view"
-                app:layout_constraintVertical_bias="0.764" />
+                app:layout_constraintVertical_bias="0.799" />
+
+            <Button
+                android:id="@+id/add_A"
+                android:layout_width="56dp"
+                android:layout_height="45dp"
+                android:backgroundTint="#359535"
+                android:text="+"
+                android:textSize="50px"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.733"
+                app:layout_constraintStart_toStartOf="@+id/view"
+                app:layout_constraintTop_toTopOf="@+id/view"
+                app:layout_constraintVertical_bias="0.799" />
 
             <Button
                 android:id="@+id/add_S"
@@ -282,7 +288,7 @@
                 android:textSize="50px"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.719"
+                app:layout_constraintHorizontal_bias="0.741"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 app:layout_constraintTop_toTopOf="@+id/view"
                 app:layout_constraintVertical_bias="0.98" />
