--- a/app/src/main/res/layout/user_clearance.xml
+++ b/app/src/main/res/layout/user_clearance.xml
@@ -15,13 +15,15 @@
         <!-- Background -->
         <View
             android:id="@+id/view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="435dp"
+            android:layout_height="879dp"
             android:background="@drawable/bg_rec"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"  />
 
         <!-- Toolbar remains at the top -->
         <androidx.appcompat.widget.Toolbar
