--- a/app/src/main/res/layout/user_dashboard.xml
+++ b/app/src/main/res/layout/user_dashboard.xml
@@ -121,6 +121,8 @@
                 android:layout_height="157dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="@+id/sched_box"
                 app:layout_constraintEnd_toEndOf="@+id/sched_box"
                 app:layout_constraintStart_toStartOf="@+id/sched_box"
@@ -159,6 +161,8 @@
                 android:layout_height="155dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="@+id/annoucement_box"
                 app:layout_constraintEnd_toEndOf="@+id/annoucement_box"
                 app:layout_constraintStart_toStartOf="@+id/annoucement_box"
@@ -196,6 +200,8 @@
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/item"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="@+id/billing_box"
                 app:layout_constraintEnd_toEndOf="@+id/billing_box"
                 app:layout_constraintHorizontal_bias="0.49"
